--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,34 +13,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-25 Wed 20:33]
+#+CAPTION: Clock summary at [2017-01-26 Thu 07:40]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *60:13* |       |       | 100.0 |
+| *Total time*                                                                | *60:56* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 60:13   |       |       | 100.0 |
-| Active                                                                      |         | 60:13 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:50 |   4.7 |
+| Stories                                                                     | 60:56   |       |       | 100.0 |
+| Active                                                                      |         | 60:56 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:50 |   4.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.0 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.4 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  17.1 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  16.9 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.2 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.5 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.4 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.7 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.6 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  22.4 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  10.5 |
-| COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.4 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  22.1 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  10.4 |
+| COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.3 |
 | COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.2 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   1.7 |
 | COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.7 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.4 |
-| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.9 |
+| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.8 |
 | COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.5 |
-| STARTED Add mapping support between upsilon and LAM                         |         |       |  1:13 |   2.0 |
+| STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   3.2 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.2 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  11.5 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  11.4 |
 | STARTED Map upsilon primitives to intrinsics                                |         |       |  2:03 |   3.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -553,6 +553,7 @@ abstract.
   named value and of the type of the primitive.
 
 *** STARTED Add mapping support between upsilon and LAM               :story:
+    CLOCK: [2017-01-26 Thu 06:57]--[2017-01-26 Thu 07:40] =>  0:43
     CLOCK: [2017-01-25 Wed 17:59]--[2017-01-25 Wed 18:10] =>  0:11
     CLOCK: [2017-01-25 Wed 17:39]--[2017-01-25 Wed 17:58] =>  0:19
     CLOCK: [2017-01-23 Mon 21:28]--[2017-01-23 Mon 22:11] =>  0:43
@@ -718,6 +719,11 @@ Another alternative is to apply hard-coded regexes:
 
 Finally, the last option may be to have yet another mapping data file
 format that lists the primitives to unbox.
+
+*** Consider renaming LAM to a sewing term                            :story:
+
+In keeping with the rest of Dogen we should also use a sewing term for
+LAM. Wool is an interesting one.
 
 *** Windows package has element mappings                              :story:
 
