--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,35 +13,36 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-26 Thu 07:40]
+#+CAPTION: Clock summary at [2017-01-26 Thu 10:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *60:56* |       |       | 100.0 |
+| *Total time*                                                                | *62:17* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 60:56   |       |       | 100.0 |
-| Active                                                                      |         | 60:56 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:50 |   4.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.0 |
+| Stories                                                                     | 62:17   |       |       | 100.0 |
+| Active                                                                      |         | 62:17 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:50 |   4.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   0.9 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.4 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  16.9 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.2 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  16.5 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   2.1 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.4 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.7 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.6 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.6 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  22.1 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  10.4 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  21.6 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  10.1 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.3 |
-| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.2 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   2.1 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   1.7 |
 | COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.7 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.4 |
-| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.8 |
-| COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.5 |
-| STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   3.2 |
+| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   7.6 |
+| COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.4 |
+| STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   3.1 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.2 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  11.4 |
-| STARTED Map upsilon primitives to intrinsics                                |         |       |  2:03 |   3.4 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |  11.1 |
+| STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   4.9 |
+| STARTED Strong type aliasing                                                |         |       |  0:20 |   0.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -693,6 +694,8 @@ Links:
 - [[http://stackoverflow.com/questions/3659044/comparison-of-c-stl-collections-and-c-sharp-collections][Comparison of C++ STL collections and C# collections?]]
 
 *** STARTED Map upsilon primitives to intrinsics                      :story:
+    CLOCK: [2017-01-26 Thu 08:42]--[2017-01-26 Thu 09:39] =>  0:57
+    CLOCK: [2017-01-26 Thu 07:39]--[2017-01-26 Thu 07:43] =>  0:04
     CLOCK: [2017-01-25 Wed 17:30]--[2017-01-25 Wed 17:38] =>  0:08
     CLOCK: [2017-01-25 Wed 15:01]--[2017-01-25 Wed 15:29] =>  0:28
     CLOCK: [2017-01-25 Wed 13:24]--[2017-01-25 Wed 14:01] =>  0:37
@@ -719,6 +722,70 @@ Another alternative is to apply hard-coded regexes:
 
 Finally, the last option may be to have yet another mapping data file
 format that lists the primitives to unbox.
+
+*** STARTED Strong type aliasing                                      :story:
+    CLOCK: [2017-01-26 Thu 09:40]--[2017-01-26 Thu 10:00] =>  0:20
+
+One extremely useful feature would be to create "aliases" for types
+which could be implemented as strongly-typed aliases where there is
+language support. The gist of the problem is as described in here:
+
+[[http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2013/n3515.pdf][Toward Opaque Typedefs for C++1Y]]
+
+This is also similar to the problem space of boost dimensions,
+although their problem is more generic. The gist of it is that one
+should be able to "conceptually" sub-class primitives such as int and
+even types such as string and have the code generator create some
+representation of that type that has the desired properties (including
+a "to underlying" function). These types would not be interchangeable
+with their aliased types. For example, if we define a "book id" as an
+unsigned int, it should not be interchangeable with unsigned
+int. Potentially it should also not have certain int abilities such as
+adding/multiplication and so forth.
+
+Links:
+
+- [[http://www.boost.org/doc/libs/1_37_0/boost/strong_typedef.hpp][Boost Strong Typedef]]
+- [[http://stackoverflow.com/questions/23726038/how-can-i-create-a-new-primitive-type-using-c11-style-strong-typedefs][How can I create a new primitive type using C++11 style strong
+  typedefs?]]
+- [[http://stackoverflow.com/questions/28916627/strong-typedefs][Strong typedefs]]
+- [[http://programmers.stackexchange.com/questions/243154/c-strongly-typed-typedef][C++ strongly typed typedef]]
+- [[http://www.ilikebigbits.com/blog/2014/5/6/type-safe-identifiers-in-c][Type safe handles in C++]]
+3
+Note: the other stories in the backlog about typedefs are just about
+the C++ feature, not this extension to it. Hence we called it "type
+aliasing" to avoid confusion.
+
+The implementation is fairly similar to enumerations:
+
+- add a stereotype for this concept.
+- add a yarn element.
+- add a meta-data parameter for the underlying type. Make it the same
+  as for enumerations. Add validation to ensure the element is always
+  a primitive. Actually, this is fine for enumerations but not for
+  "primitives". We need an additional parameter on each element (can
+  be the underlying element of a primitive?).
+- add formatters.
+
+The first problem is what to call it. Type alias is not a good name
+because an alias implies they are interchangeable; this is what one is
+trying to avoid. One sneaky way out is to call primitives "builtins"
+and call these "primitives". This somewhat reflects the truth in that
+builtins are supposed to be hardware level concepts.
+
+*** Add case conversion support                                       :story:
+
+When we map a LAM model into C#, it will have whatever case we used
+originally. This is not ideal as in C++ we'd like to use underscores
+instead. It would be nice if there was an "identifier converter" that
+went through the model and updated all identifiers from underscores to
+camel case. This includes classes, attributes, enumerators, etc. The
+LAM model would remain with underscores.
+
+For this to work correctly we'd need some kind of "casing" enumeration
+associated with the model, and then another one associated with each
+language. This means that if the model is already in camel case, we
+would just generate camel case for both C++ and C#.
 
 *** Consider renaming LAM to a sewing term                            :story:
 
