--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,37 +13,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-27 Fri 12:14]
+#+CAPTION: Clock summary at [2017-01-27 Fri 14:16]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *71:45* |       |       | 100.0 |
+| *Total time*                                                                | *72:35* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 71:45   |       |       | 100.0 |
-| Active                                                                      |         | 71:45 |       | 100.0 |
+| Stories                                                                     | 72:35   |       |       | 100.0 |
+| Active                                                                      |         | 72:35 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  3:02 |   4.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   0.8 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.2 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  14.4 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   1.9 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.1 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  14.2 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   1.8 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   2.0 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.4 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.5 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  18.8 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   8.8 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  18.6 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   8.7 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.1 |
-| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   1.9 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   1.8 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   1.4 |
-| COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.5 |
+| COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.4 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.4 |
-| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   6.6 |
+| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   6.5 |
 | COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   2.1 |
-| COMPLETED Rename primitives to built-in                                     |         |       |  2:20 |   3.3 |
-| STARTED Create a new yarn type for primitives                               |         |       |  7:16 |  10.1 |
+| COMPLETED Rename primitives to built-in                                     |         |       |  2:20 |   3.2 |
+| STARTED Create a new yarn type for primitives                               |         |       |  8:06 |  11.2 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   2.7 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.0 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |   9.6 |
-| STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   4.3 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |   9.5 |
+| STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   4.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -568,6 +568,7 @@ by renaming the current =primitive= to =built_in=. We should end up
 with no references at all to this name.
 
 *** STARTED Create a new yarn type for primitives                     :story:
+    CLOCK: [2017-01-27 Fri 13:26]--[2017-01-27 Fri 14:16] =>  0:50
     CLOCK: [2017-01-27 Fri 12:11]--[2017-01-27 Fri 12:14] =>  0:03
     CLOCK: [2017-01-27 Fri 11:38]--[2017-01-27 Fri 12:10] =>  0:32
     CLOCK: [2017-01-27 Fri 11:01]--[2017-01-27 Fri 11:37] =>  0:36
