--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-31 Tue 16:42]
+#+CAPTION: Clock summary at [2017-01-31 Tue 16:49]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *18:27* |       |      | 100.0 |
+| *Total time*                                                                | *18:33* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 18:27   |       |      | 100.0 |
-| Active                                                                      |         | 18:27 |      | 100.0 |
+| Stories                                                                     | 18:33   |       |      | 100.0 |
+| Active                                                                      |         | 18:33 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:01 |   0.1 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:43 |   3.9 |
-| COMPLETED Add support for configurable enumerations types                   |         |       | 4:10 |  22.6 |
+| COMPLETED Add support for configurable enumerations types                   |         |       | 4:10 |  22.5 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       | 0:12 |   1.1 |
-| COMPLETED Add support for configurable enumeration values                   |         |       | 5:26 |  29.4 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 7:55 |  42.9 |
+| COMPLETED Add support for configurable enumeration values                   |         |       | 5:26 |  29.3 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 8:01 |  43.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -156,6 +156,7 @@ We could:
 - add meta-data to disable setting the enumerator value altogether.
 
 *** STARTED Add support for primitives across the pipeline            :story:
+    CLOCK: [2017-01-31 Tue 16:43]--[2017-01-31 Tue 16:49] =>  0:06
     CLOCK: [2017-01-31 Tue 16:37]--[2017-01-31 Tue 16:42] =>  0:05
     CLOCK: [2017-01-31 Tue 16:28]--[2017-01-31 Tue 16:36] =>  0:08
     CLOCK: [2017-01-31 Tue 16:20]--[2017-01-31 Tue 16:27] =>  0:07
