--- a/doc/agile/sprint_backlog_97.org
+++ b/doc/agile/sprint_backlog_97.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-01 Wed 10:54]
+#+CAPTION: Clock summary at [2017-02-01 Wed 11:05]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *20:37* |       |       | 100.0 |
+| *Total time*                                                                | *20:47* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 20:37   |       |       | 100.0 |
-| Active                                                                      |         | 20:37 |       | 100.0 |
+| Stories                                                                     | 20:47   |       |       | 100.0 |
+| Active                                                                      |         | 20:47 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:01 |   0.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   3.5 |
-| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  20.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:43 |   3.4 |
+| COMPLETED Add support for configurable enumerations types                   |         |       |  4:10 |  20.0 |
 | COMPLETED Allow disabling =invalid= value in enumerations                   |         |       |  0:12 |   1.0 |
-| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  26.4 |
-| STARTED Add support for primitives across the pipeline                      |         |       | 10:05 |  48.9 |
+| COMPLETED Add support for configurable enumeration values                   |         |       |  5:26 |  26.1 |
+| STARTED Add support for primitives across the pipeline                      |         |       | 10:15 |  49.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -156,6 +156,8 @@ We could:
 - add meta-data to disable setting the enumerator value altogether.
 
 *** STARTED Add support for primitives across the pipeline            :story:
+    CLOCK: [2017-02-01 Wed 11:01]--[2017-02-01 Wed 11:05] =>  0:04
+    CLOCK: [2017-02-01 Wed 10:55]--[2017-02-01 Wed 11:01] =>  0:06
     CLOCK: [2017-02-01 Wed 10:43]--[2017-02-01 Wed 10:54] =>  0:11
     CLOCK: [2017-02-01 Wed 09:25]--[2017-02-01 Wed 10:42] =>  1:17
     CLOCK: [2017-01-31 Tue 17:10]--[2017-01-31 Tue 17:46] =>  0:36
